# tidymoney

./: Cargo.toml  LICENSE  README.md
src/: eqregex.rs  file_io.rs  lib.rs  main.rs  process.rs  rules.rs  timestamps.rs
src/rules/: category_and_memo.rs  date_filter.rs  eqregex.rs  mapping.rs  paths.rs  payees.rs
tests/: integration_tests.rs
