[package]
name = "tidymoney"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
csv = "1.3.1"
expanduser = "1.2.2"
indoc = "2.0.5"
regex = "1.11.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
void = "1.0.2"

[dev-dependencies]
rstest = "0.23.0"
tempdir = "0.3.7"
