[package]
name = "tidymoney"
version = "0.1.0"
edition = "2021"
description = "Clean up raw data downloaded from banks"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
config-finder = "0.1.2"
csv = "1.3.1"
indoc = "2.0.5"
regex = "1.11.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simple-expand-tilde = "0.4.5"
toml = "0.8.19"
void = "1.0.2"

[dev-dependencies]
glob = "0.3.2"
pretty_assertions = "1.4.1"
rstest = "0.23.0"
tempdir = "0.3.7"
